--- a/src/OpenAPI/index.html
+++ b/src/OpenAPI/index.html
@@ -19,7 +19,8 @@
           window.ui = SwaggerUIBundle({
             urls: [
 		    {url: 'http://4.232.216.59/login-register/openapi.json', name: "Login register API",},
-		{url: 'http://4.232.216.59/book-manager/openapi.json', name: "Book manager API",}	    
+		{url: 'http://4.232.216.59/book-manager/openapi.json', name: "Book manager API",},   
+		{url: 'http://4.232.216.59/book-info/openapi.json', name: "Book info API",},	    
 	    ],
             dom_id: '#swagger-ui',
             presets: [
